--- a/Codigo/templates/index.html
+++ b/Codigo/templates/index.html
@@ -423,7 +423,9 @@
       <div class="composer-header">
         <h2 style="margin:0">Espacio para Escribir el Mensaje</h2>
         <div class="font-controls">
-          <label>Tamaño de letra (página):</label>
+          <label>
+            Tamaño de letra (página):
+          </label>
           <button type="button" onclick="changeFontSize(-1)">A-</button>
           <button type="button" onclick="changeFontSize(1)">A+</button>
         </div>
